# leadsflow

./: .env.example  .gitignore  app.py  app_settings.py  pyproject.toml  readme.md  requirements.txt  settings.py
src/leadsflow/: __init__.py  utils.py
src/leadsflow/core/config/: env_loader.py
src/leadsflow/core/email/: __init__.py  placeholder_checker.py  smtp_sender.py  templates.py
src/leadsflow/core/llm/: generator.py
src/leadsflow/steps/: __init__.py  generation.py  sending.py  validation.py
tests/: test_email.py
