[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "leadsflow"
version = "0.1.0"
description = "Streamlit application for processing B2B sales leads with validation, AI content generation, and SMTP sending."
readme = "readme.md"
requires-python = ">=3.10"
license = {text = "MIT"} # Consider choosing an appropriate license
authors = [
  {name = "Yassine Senhaji"},
]
maintainers = [
  {name = "Yassine Senhaji"},
]
keywords = ["leads", "sales", "b2b", "email", "validation", "generation", "ai", "openai", "smtp", "streamlit"]
classifiers = [
    "Development Status :: 3 - Alpha",  # Or 4 - Beta / 5 - Production/Stable
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License", # Adjust if you chose a different license
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Email",
    "Topic :: Office/Business :: Financial :: Point-of-Sale", # Maybe adjust topics
    "Framework :: Streamlit",
]
urls = {
    "Homepage" = "https://github.com/Loryo80",
    # Add repository URL when available, e.g.
    # "Repository" = "https://github.com/Loryo80/leadsflow",
}

[tool.setuptools.packages.find]
where = ["src"]  # Tell setuptools to look for packages in src 